# smartman-cli

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  demo.tape  install.sh  pyproject.toml  reddit_post.md  smartman.rb  verify_logic.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
smartman/: __init__.py  cli.py
smartman/parser/: __init__.py  man_parser.py
smartman/renderer/: __init__.py  formatter.py  tui.py
smartman/themes/: catppuccin.yaml  default.yaml  dracula.yaml  monokai.yaml  nord.yaml
smartman/utils/: __init__.py  ai.py  tips.py
tests/: test_parser.py
